feat: always show the nav bar

--- a/css/tooplate-ben-resume-style.css
+++ b/css/tooplate-ben-resume-style.css
@@ -296,6 +296,10 @@ https://www.tooplate.com/view/2120-ben-resume
     top: 8px;
   }
 
+  .intro-body {
+    padding-top: 4rem;
+  }
+
 
 
   /*---------------------------------------
